# poe-item-analyzer-claude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: checksum.rs  downloader.rs  error.rs  github.rs  lib.rs  manifest.rs  tests.rs  update_checker.rs
crates/api/src/parser/: lua.rs  lut.rs  mod.rs  tests.rs  zip_parser.rs
crates/api/src/poe_api/: leagues.rs  mod.rs  models.rs  stash.rs
crates/api/src/sources/: file.rs  mod.rs  public_stash.rs
crates/api/tests/: downloader_integration.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/analyzers/: mod.rs  tests.rs  timeless.rs  traits.rs
crates/core/src/data/: mod.rs  traits.rs
crates/core/src/items/: mod.rs  tests.rs  timeless_jewel.rs  traits.rs
crates/core/src/scoring/: mod.rs  tests.rs  weighted.rs
crates/core/tests/: scoring_integration.rs  timeless_jewel_workflow.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  main.rs
crates/desktop/src/ui/: mod.rs
data/: .gitignore  README.md  manifest.json
